@@ -46,7 +46,7 @@ function module_main()
     } else {
         $notice = $DB->GetAll(
             'SELECT m.subject, m.cdate, m.body, m.type, mi.id, mi.messageid, mi.destination, mi.status,
-                mi.lastdate, mi.lastreaddate
+                mi.lastdate, mi.lastreaddate, mi.body as mibody
 			FROM customers c
 			JOIN messageitems mi ON mi.customerid = c.id
 			JOIN messages m ON m.id = mi.messageid
