@@ -38,8 +38,13 @@
 				<tr id="{$items.id}" style="display:none;">
 					<td colspan="4" >
 						<h3>{trans("Body:")}</h3>
-						{$items.body}<br /><br />
-						{if $items.status != $smarty.const.MSG_DELIVERED}<a class="btn btn-primary" href="?m=notices&amp;confirm={$items.id}">{trans("I confirm reading")}</a>{/if}</td>
+						{if $items.mibody}
+							{$items.mibody|nl2br}<br /><br />
+							{if $items.status != $smarty.const.MSG_DELIVERED}<a class="btn btn-primary" href="?m=notices&amp;confirm={$items.id}">{trans("I confirm reading")}</a>{/if}</td>
+						{else}
+							{$items.body}<br /><br />
+							{if $items.status != $smarty.const.MSG_DELIVERED}<a class="btn btn-primary" href="?m=notices&amp;confirm={$items.id}">{trans("I confirm reading")}</a>{/if}</td>
+						{/if}
 				</tr>
 				<SCRIPT type="text/javascript">
 					<!--
