@@ -88,6 +88,7 @@ version 25-git (????-??-??):
   - enhancement: allow to copy access rights from other existing user selected
     from list [chilan]
   - improvement: added support for %services replace symbol in messages [ravvar]
+  - improvement: allow display message body with wildcards for particular message [ravvar]
 
 version 24.0 (2019-05-16):
 
